crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__n-dash.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "fra"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "fra",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "allow Unicode 2013 in %mor",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "I",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "need",
                  "pos": "x"
                }
              },
              {
                "main": {
                  "lemma": "band–aids",
                  "pos": "x"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "FLAT-FOREIGN"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "FLAT-FOREIGN"
              },
              {
                "head": 1,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "span": {
                "end": 161,
                "start": 160
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "need",
                  "type": "text"
                }
              ],
              "raw_text": "need",
              "span": {
                "end": 166,
                "start": 162
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "band-aids",
                  "type": "text"
                }
              ],
              "raw_text": "band-aids",
              "span": {
                "end": 176,
                "start": 167
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "fra",
        "role": "Target_Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    }
  }
}
